# simpleeval

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.rst  LICENCE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  executors.py  pyproject.toml  setup.cfg  setup.py  simpleeval.py  test_simpleeval.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
requirements/: dev.txt
tests/: base.py  test_allowed_attributes.py  test_basics.py  test_compound_types.py  test_comprehensions.py  test_deliberately_missed_features.py  test_disallowed_functions.py  test_evaluator.py  test_exceptions.py  test_extending_the_class.py  test_functions.py  test_get_item_unhappy_paths.py  test_method_chaining.py  test_module_wrapper.py  test_names.py  test_no_entries.py  test_operators.py  test_reference_cleanup.py  test_security.py  test_short_circuiting.py  test_simple_eval_function.py  test_unusual_comparisons.py  test_whitespace.py
