[build-system]
requires = ["setuptools>=30.3.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
combine_as_imports = true
float_to_top = true
line_length = 99
include_trailing_comma = true
force_grid_wrap = 0
multi_line_output = 3

[tool.pylint.messages_control]
disable = [
    "consider-using-f-string",
    "invalid-name",
    "too-few-public-methods",
    "too-many-public-methods",
    "super-with-arguments",
    "useless-object-inheritance",
    "unnecessary-pass",
    "bad-super-call",
    ]

