[project]
name = "simpleeval"
version = "1.0.3"
requires-python = ">=3.9"
readme = "README.rst"
description = "A simple, safe single expression evaluator library."
licence = "MIT"
authors = [
    { name = "Daniel Fairhead", email = "danthedeckie@gmail.com" }
]
maintainers = [
    { name = "Daniel Fairhead", email = "danthedeckie@gmail.com" }
]
keywords = [
    "eval", "simple", "expression", "parse", "ast"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
]
dependencies = []

[project.urls]
"Source code" = "https://github.com/danthedeckie/simpleeval"

[pycodestyle]
max_line_length = 99

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "simpleeval.py",
    "test_simpleeval.py",
    "README.rst",
    "LICENCE",
]

[tool.hatch.version]
path = "simpleeval.py"

[tool.hatch.envs.hatch-test]
default-args = ["test_simpleeval.py"]

[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
line-length = 99

[tool.isort]
combine_as_imports = true
float_to_top = true
line_length = 99
include_trailing_comma = true
force_grid_wrap = 0
multi_line_output = 3

[tool.pylint.messages_control]
disable = [
    "fixme",
    "consider-using-f-string",
    "raise-missing-from",
    "invalid-name",
    "too-few-public-methods",
    "too-many-public-methods",
    "super-with-arguments",
    "useless-object-inheritance",
    "unnecessary-pass",
    "bad-super-call",
]
