[metadata]
name = simpleeval
version = 1.0.0
author = Daniel Fairhead
author_email = danthedeckie@gmail.com
description = A simple, safe single expression evaluator library.
keywords = eval, simple, expression, parse, ast
url = https://github.com/danthedeckie/simpleeval
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python

[options]
py_modules = simpleeval
python_requires = >=3.9

[pycodestyle]
max_line_length = 99
